# RDF-TDAA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  error
exec/: CMakeLists.txt  args_parser.cpp  main.cpp
include/exec/: args_parser.hpp
include/rdf-tdaa/: rdf-tdaa.hpp
include/rdf-tdaa/dictionary/: dictionary.hpp  dictionary_builder.hpp
include/rdf-tdaa/index/: characteristic_set.hpp  cs_daa_map.hpp  daas.hpp  index_builder.hpp  index_retriever.hpp  predicate_index.hpp
include/rdf-tdaa/parser/: sparql_lexer.hpp  sparql_parser.hpp
include/rdf-tdaa/query/: plan_generator.hpp  query_executor.hpp
include/rdf-tdaa/server/: server.hpp
include/rdf-tdaa/utils/: bit_operations.hpp  bitset.hpp  daa.hpp  join_list.hpp  mmap.hpp  predicate_set_trie.hpp  result_list.hpp  vbyte.hpp
scripts/: build.sh
src/: CMakeLists.txt  rdf-tdaa.cpp
src/dictionary/: dictionary.cpp  dictionary_builder.cpp
src/index/: characteristic_set.cpp  cs_daa_map.cpp  daas.cpp  index_builder.cpp  index_retriever.cpp  predicate_index.cpp
src/parser/: plan_generator.cpp  sparql_lexer.cpp  sparql_parser.cpp
src/query/: plan_generator.cpp  query_executor.cpp
src/server/: server.cpp
src/utils/: bit_operations.cpp  bitset.cpp  daa.cpp  join_list.cpp  predicate_set_trie.cpp  result_list.cpp  vbyte.cpp
